--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div id="buttons-appear-here"></div>
 
     <div id="searchHere">
-    <label for="country-input">Add a food</label>
+    <h2>Click the buttons to display the GIPHYS.</h2>
+    <h2>Click the GIPHYS to pause and start.</h2>
+    <label for="country-input">Search the GIPHY API to add a button</label>
     <input type="text" id="userInput">
     <button type="submit" class="btn btn-default" id="addButton">Submit</button>
     </div>
